Fix: primary outline btn dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,7 +12,7 @@
     }
 
     .primaryOutlineBtn {
-        @apply bg-white hover:bg-indigo-700 dark:bg-indigo-600 dark:hover:bg-indigo-800 dark:text-white border-2 border-indigo-700 active:outline active:outline-2 active:outline-blue-400/80 py-2.5 text-indigo-700 hover:text-white px-4 rounded-full font-medium transition-colors duration-300;
+        @apply bg-white hover:bg-indigo-700 dark:hover:text-white dark:text-indigo-700 dark:hover:bg-indigo-800 border-2 border-indigo-700 active:outline active:outline-2 active:outline-blue-400/80 py-2.5 text-indigo-700 hover:text-white px-4 rounded-full font-medium transition-colors duration-300;
     }
 
     .primaryTextBtn {
